fixed overflow x

--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -10,6 +10,7 @@
 #vacuums {
   width: 67%;
   overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 #map {
